--- a/styles2.css
+++ b/styles2.css
@@ -14,7 +14,7 @@ a { color: black;
 
 
 body {
-    background-image: url("saint-marys.JPG");
+    background-image: url("vectors.png");
     background-color: #cccccc;
 }
 
