--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ a { color: black;
 
 
 body {
-    background-image: url("growing-entrepreneurs.jpg");
+    background-image: url("vectors.png");
     background-color: #cccccc;
 }
 
